--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,17 @@
 
 osx_image: xcode8.2
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+cache: cocoapods
+podfile: Example/Podfile
+before_install:
+- brew update
+- gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator10.2 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
+
+# whitelist
+branches:
+ only:
+ - master
