--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,11 @@ before_install:
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2' ONLY_ACTIVE_ARCH=NO | xcpretty
+- xctool -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example build test -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
 - pod lib lint
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
 
 # whitelist
 branches:
