--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2' ONLY_ACTIVE_ARCH=NO | xcpretty
-- xctool -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example build test -sdk iphonesimulator GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES
+- set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator10.2 GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
 
 after_success:
