- Fix error when attaching authentication bearer requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,15 @@ cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - brew update
+- brew outdated xctool || brew upgrade xctool
+- brew outdated carthrage || brew upgrade carthrage
 - gem install cocoapods # Since Travis is not always on latest version
+- gem install xcpretty
+- gem install xcpretty-travis-formatter
+- xcrun simctl list
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator10.2 GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2, id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12' ONLY_ACTIVE_ARCH=NO | xcpretty
+# - set -o pipefail && xcodebuild test -workspace Example/CSFramework.xcworkspace -scheme CSFramework-Example -sdk iphonesimulator10.2 GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.2, id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
 
 after_success:
